--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="top-panel">
         <span>Fishing Hole App</span>
-        <span id="weather-info" style="float: right; padding-right: 20px;"></span>
+        <span id="weather-info"></span>
     </div>
 
     <div id="sidebar">
@@ -29,7 +29,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
 
-    <script src="script.js"></script>
+    <script src="script.js?v=1.2"></script>
 </body>
 
 </html>
