--- a/index.html
+++ b/index.html
@@ -12,8 +12,14 @@
 <body>
     <div id="top-panel">
         <span>Fishing Hole App</span>
-        <span id="weather-info"></span>
+        <div id="weather-info">
+            <div>clear sky, 61.79°F</div>
+            <div>Sunrise: 6:42:25 AM | Sunset: 8:02:38 PM</div>
+            <div>Moonrise: 9:50:00 PM | Moonset: 9:59:00 AM</div>
+            <div>Moon Phase: Waning Gibbous</div>
+        </div>
     </div>
+    
 
     <div id="sidebar">
         <button id="add-btn" class="sidebar-button">Add</button>
@@ -29,7 +35,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-firestore-compat.js"></script>
 
-    <script src="script.js?v=1.5"></script>
+    <script src="script.js?v=1.6"></script>
 </body>
 
 </html>
