--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
     <a href="#" id="sign-up-link">Don't have an account? Sign up</a>
 </div>
 
-    <div id="sidebar">
-        <button id="sign-in-btn">Sign In</button>
-        <button id="sign-out-btn" style="display:none;">Sign Out</button>
-        <!-- Add, Edit, Delete buttons remain the same -->
-        <button id="add-btn">Add</button>
-        <button id="edit-btn">Edit</button>
-        <button id="delete-btn">Delete</button>
-        <button id="done-btn" style="display:none;">Done</button>
-    </div>
+<div id="sidebar">
+    <button id="sign-in-btn" class="sidebar-button">Sign In</button>
+    <button id="sign-out-btn" class="sidebar-button" style="display:none;">Sign Out</button>
+    <button id="add-btn" class="sidebar-button">Add</button>
+    <button id="edit-btn" class="sidebar-button">Edit</button>
+    <button id="delete-btn" class="sidebar-button">Delete</button>
+    <button id="done-btn" class="sidebar-button" style="display:none;">Done</button>
+</div>
+
 
     <div id="map"></div>
 
